--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -42,11 +42,10 @@
   background-color: var(--serenity-key-white);
 }
 
-
 .piano-key.white.selected {
   background-color: var(--serenity-key-white-selected0);
 }
-
+ 
 .piano-key.black {
   width: calc(100% / var(--bKeysPer2Octaves));
   height: 60%;
@@ -57,9 +56,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-left: 5px;
+  padding-left: 2px;
   background-color: var(--serenity-key-black);
   color: var(--serenity-note-text-on-black);
+  font-size: 0.8em; 
 }
 
 .piano-key.black.selected {
