--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,7 +30,7 @@ body {
 
   /* Grid Container */
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100px 3fr 3fr 2fr;
+  grid-template-rows: 100px minmax(230px, 3fr) 3fr 2fr;
   /*default: portrait mode */
   grid-template-areas:
     "staff staff"
@@ -93,7 +93,6 @@ body {
   gap: 1rem;
   overflow: hidden;
   padding: 1rem;
-  padding-right: 2rem;
   height: 100%;
   min-height: 0;
   box-sizing: border-box;
