--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -95,6 +95,9 @@
   margin: 0;
   width: 40px;
   height: 40px;
+  fill: black;
+  /* stroke: black; */
+  stroke-width: 2px; 
 }
 
 .viz-button.selected {
@@ -103,5 +106,6 @@
   cursor: pointer;
   padding: 0;
   margin: 0;
+  fill: white;
 }
 
