--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -114,8 +114,7 @@
   background: none;
   cursor: pointer;
   padding: 3px;
-  margin: 0;
-  margin-top: 5px;
+  margin: 5px 0 0;
   z-index: 10;
   font-style: italic;
   font-size: 0.8em;
