--- a/src/styles/ChordNameDisplay.css
+++ b/src/styles/ChordNameDisplay.css
@@ -5,6 +5,7 @@
   text-align: center;
   width: 100%;
   margin-top: 50px; /* Add top margin to create space */
+  gap: 0.5rem;
 }
 
 .chord-name-description,
