--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -88,8 +88,8 @@
 }
 
 .viz-button {
-  border: none;
-  background: none;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: white;
   cursor: pointer;
   padding: 0;
   margin: 0;
@@ -102,7 +102,7 @@
 
 .viz-button.selected {
   border: 1px;
-  background: var(--serenity-key-white-selected0);
+  background: #598ABB;/*var(--serenity-key-white-selected0);*/
   cursor: pointer;
   padding: 0;
   margin: 0;
