--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -109,6 +109,21 @@
   fill: white;
 }
 
+.viz-button svg {
+  stroke: black;
+  stroke-width: 3px;
+  stroke-opacity: 0.4;
+  fill-opacity: 0.4;
+  fill: none;
+}
+
+.viz-button.selected svg {
+  stroke: white;
+  stroke-width: 3px;
+  stroke-opacity: 1;
+  fill-opacity: 1;
+}
+
 #major-minor-toggle {
   border: 1px solid var(--serenity-border-color);
   background: none;
