--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -31,6 +31,7 @@
   --serenity-key-black-selected1: #D3B77E;
   --serenity-note-text-on-white: #333333;
   --serenity-note-text-on-black: #F5F5F5;
+  --serenity-icon-selected-background: #598ABB;
   --serenity-border-color: rgba(0, 0, 0, 0.15);
   --serenity-polygon-stroke: #cccccc;
 }
