--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -96,16 +96,12 @@
   width: 40px;
   height: 40px;
   fill: black;
-  /* stroke: black; */
   stroke-width: 2px; 
 }
 
 .viz-button.selected {
   border: 1px;
-  background: #598ABB;/*var(--serenity-key-white-selected0);*/
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
+  background: var(--serenity-icon-selected-background);
   fill: white;
 }
 
@@ -119,7 +115,6 @@
 
 .viz-button.selected svg {
   stroke: white;
-  stroke-width: 3px;
   stroke-opacity: 1;
   fill-opacity: 1;
 }
