--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -88,25 +88,36 @@
 }
 
 .viz-button {
-  border: none;
-  background: none;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius:10%;
+  background: white;
   cursor: pointer;
   padding: 0;
   margin: 0;
   width: 40px;
   height: 40px;
   fill: black;
-  /* stroke: black; */
   stroke-width: 2px; 
 }
 
 .viz-button.selected {
   border: 1px;
-  background: var(--serenity-key-white-selected0);
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
+  background: var(--serenity-icon-selected-background);
   fill: white;
+}
+
+.viz-button svg {
+  stroke: black;
+  stroke-width: 3px;
+  stroke-opacity: 0.4;
+  fill-opacity: 0.4;
+  fill: none;
+}
+
+.viz-button.selected svg {
+  stroke: white;
+  stroke-opacity: 1;
+  fill-opacity: 1;
 }
 
 #major-minor-toggle {
