--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -37,6 +37,20 @@
   justify-content: space-between;
 }
 
+#major-minor-toggle {
+  border: 1px solid var(--serenity-border-color);
+  background: none;
+  cursor: pointer;
+  padding: 3px;
+  margin: 5px 0 0;
+  z-index: 10;
+  font-style: italic;
+  font-size: 0.8em;
+  border-radius: 10px;
+  background-color: var(--serenity-key-white);
+  color: var(--serenity-note-text-on-white);
+}
+
 /* Pie Slice Keys */
 .pie-slice-key {
   cursor: pointer;
@@ -75,6 +89,8 @@
 /* Text Styles */
 .pie-slice-key text {
   font-size: 1.2em;
+  text-anchor: middle;
+  dominant-baseline: middle;
   font-weight: bold;
   pointer-events: none;
 }
@@ -98,6 +114,8 @@
   height: 40px;
   fill: black;
   stroke-width: 2px; 
+  position:relative;
+  z-index: 10;
 }
 
 .viz-button.selected {
@@ -120,17 +138,4 @@
   fill-opacity: 1;
 }
 
-#major-minor-toggle {
-  border: 1px solid var(--serenity-border-color);
-  background: none;
-  cursor: pointer;
-  padding: 3px;
-  margin: 5px 0 0;
-  z-index: 10;
-  font-style: italic;
-  font-size: 0.8em;
-  border-radius: 10px;
-  background-color: var(--serenity-key-white);
-  color: var(--serenity-note-text-on-white);
-}
 
