--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -21,7 +21,7 @@
   justify-content: center;
   box-sizing: border-box;
   cursor: pointer;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-weight: bold;
   padding: 0 5px; /* Added padding to center the text */
 }
@@ -59,7 +59,7 @@
   padding-left: 2px;
   background-color: var(--serenity-key-black);
   color: var(--serenity-note-text-on-black);
-  font-size: 0.8em; 
+  font-size: 0.8rem; 
 }
 
 .piano-key.black.selected {
