--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -25,17 +25,17 @@
     justify-content: center;
     gap: 0.5rem;
     margin-top: 0rem;
-    min-height: 2.5rem;
+    min-height: 2rem;
   }
 
 /*color schemes (common to both)*/
 .preset-button,
 .inversion-button {
     background-color: #e0e0e0;
-    color: #333333;
-    border: 1px solid #cccccc;
+    color: var(--serenity-dark-grey);
+    border: 1px solid var(--key-border);
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
 }
 
 .preset-button:hover,
@@ -63,14 +63,13 @@
     overflow: hidden;
     text-overflow: ellipsis;
     border-radius: 8px;
-    
 } 
 
 /*formatting for the inversion buttons*/
 .inversion-button {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
