--- a/src/styles/CircularViz.css
+++ b/src/styles/CircularViz.css
@@ -1,8 +1,7 @@
-
 .viz-button {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-radius:10%;
-    background: white;
+    border: 1px solid var(--viz-button-border-default);
+    border-radius: 10%;
+    background: var(--viz-button-background-default);
     cursor: pointer;
     padding: 0;
     margin: 0;
@@ -10,40 +9,40 @@
     height: 40px;
     fill: black;
     stroke-width: 2px; 
-    position:relative;
+    position: relative;
     z-index: 10;
-  }
+}
   
-  .viz-button.selected {
+.viz-button.selected {
     border: 1px;
-    background: var(--serenity-icon-selected-background);
+    background: var(--viz-button-background-selected);
     fill: white;
-  }
+}
   
-  .viz-button svg {
-    stroke: black;
+.viz-button svg {
+    stroke: var(--viz-button-stroke-default);
     stroke-width: 3px;
     stroke-opacity: 0.4;
     fill-opacity: 0.4;
-    fill: none;
-  }
+    fill: var(--viz-button-fill-default);
+}
   
-  .viz-button.selected svg {
-    stroke: white;
+.viz-button.selected svg {
+    stroke: var(--viz-button-stroke-selected);
     stroke-opacity: 1;
     fill-opacity: 1;
-  }
+}
 
-  .selected-notes-polygon {
+.selected-notes-polygon {
     fill: none;
-    stroke: var(--serenity-polygon-stroke);
+    stroke: var(--viz-polygon-stroke);
     stroke-width: 6px;
     stroke-linecap: round;
-  }
+}
 
-  .base-note-dot {
-    fill: var(--root-note-highlight);
-    stroke: var(--serenity-polygon-stroke);
+.base-note-dot {
+    fill: var(--viz-base-note-fill);
+    stroke: var(--viz-base-note-stroke);
     stroke-width: 1px;
-  }
+}
   
