--- a/src/styles/ChordNameDisplay.css
+++ b/src/styles/ChordNameDisplay.css
@@ -1,4 +1,5 @@
 .chord-display {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,33 +10,19 @@
 }
 
 .chord-name-description,
-.chord-name-value,
-.chord-notes {
+.chord-name-value {
   text-align: center;
   width: 100%;
 }
 
 .chord-name-description {
-  font-size: 16px;
+  font-size: 1rem;
   margin: 0;
 }
 
 .chord-name-value {
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: bold;
   margin: 0;
 }
 
-.chord-notes {
-  font-size: 20px;
-  margin: 0;
-}
-
-.chord-display-mode-toggle {
-  font-size: 12px;
-  background-color: grey;
-  color: white;
-  border: 2px solid white;
-  border-radius: 5px;
-  padding: 0;
-}
