--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -14,7 +14,6 @@
     min-width: 0;  /* Allow shrinking */
 }
 
-
 .inversion-controls {
     margin-top: 0.5rem;
     flex-shrink: 0;
@@ -25,29 +24,29 @@
     justify-content: center;
     gap: 0.5rem;
     margin-top: 0rem;
-    min-height: 2.5rem;
+    min-height: 2rem;
   }
 
 /*color schemes (common to both)*/
 .preset-button,
 .inversion-button {
-    background-color: #e0e0e0;
-    color: #333333;
-    border: 1px solid #cccccc;
+    background-color: var(--button-background-default);
+    color: var(--button-text-default);
+    border: 1px solid var(--button-border-default);
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
 }
 
 .preset-button:hover,
 .inversion-button:hover {
-    background: #d6d6d6; 
+    background: var(--button-background-hover);
 }
 
 .preset-button.selected,
 .inversion-button.selected {
-    background-color: #598abb;
-    color: #ffffff;
-    border: 1px solid #3a8dcc;   
+    background-color: var(--button-background-selected);
+    color: var(--button-text-selected);
+    border: 1px solid var(--button-border-selected);
 }
 
 /*formatting for the preset buttons*/
@@ -55,7 +54,6 @@
     width: 100%;
     min-height: 2rem;
     padding: 0.25rem 0.5rem;
-    font-size: 0.8rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,14 +61,13 @@
     overflow: hidden;
     text-overflow: ellipsis;
     border-radius: 8px;
-    
 } 
 
 /*formatting for the inversion buttons*/
 .inversion-button {
-    width: 2.5rem;
-    height: 2.5rem;
-    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
