--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -22,21 +22,22 @@
 
   .transpose-buttons-container {
     height: 100%;
+    width: 2.5rem;
     display: flex;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
   }
 
   .transpose-button {
     border: 1px solid var(--toggle-button-border);
     font-size: 0.8rem;
-    width: 2rem;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-self: center;
+    justify-content: center;
+    align-items: center;
     z-index: 10;
   }
