--- a/src/styles/CircularSettings.css
+++ b/src/styles/CircularSettings.css
@@ -1,4 +1,21 @@
+#keyboardcircular-settings {
+    display: grid;
+    height: 40px !important;
+    min-height: 40px;
+    max-height: 40px;
+    padding: 0.5rem;
+    box-sizing: border-box;
 
+    /* Grid Item */
+    grid-area: topbar;
+
+    /* Grid Container */
+    grid-template-columns: 1fr auto;
+    gap: 0;
+    align-items: center;
+    justify-content: space-between;
+}
+  
 #major-minor-toggle {
     border: 1px solid var(--toggle-button-border); 
     background: none;
