--- a/src/styles/CircularSettings.css
+++ b/src/styles/CircularSettings.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 
     /* Grid Item */
-    grid-area: topbar;
+    grid-area: sidebar;
 
     /* Grid Container */
     grid-template-columns: 1fr auto;
@@ -18,6 +18,8 @@
   
 #major-minor-toggle {
     border: 1px solid var(--toggle-button-border); 
+    background-color: var(--toggle-button-background);
+    color: var(--toggle-button-text);
     background: none;
     cursor: pointer;
     padding: 3px;
@@ -26,8 +28,6 @@
     font-style: bold;
     font-size: 0.8rem;
     border-radius: 10px;
-    background-color: var(--toggle-button-background);
-    color: var(--toggle-button-text);
   }
   
   .key-selector {
@@ -49,6 +49,8 @@
 
   .transpose-button {
     border: 1px solid var(--toggle-button-border);
+    background: var(--toggle-button-background);
+    color: var(--toggle-button-text);
     font-size: 0.8rem;
     width: 100%;
     height: 100%;
