--- a/src/styles/CircularViz.css
+++ b/src/styles/CircularViz.css
@@ -1,3 +1,8 @@
+.viz-button-group {
+    display: flex;
+    flex-direction: row;
+}
+
 .viz-button {
     border: 1px solid var(--viz-button-border-default);
     border-radius: 10%;
