--- a/src/styles/CircularSettings.css
+++ b/src/styles/CircularSettings.css
@@ -1,6 +1,25 @@
+#keyboardcircular-settings {
+    display: grid;
+    height: 40px !important;
+    min-height: 40px;
+    max-height: 40px;
+    padding: 0.5rem;
+    box-sizing: border-box;
 
+    /* Grid Item */
+    grid-area: sidebar;
+
+    /* Grid Container */
+    grid-template-columns: 1fr auto;
+    gap: 0;
+    align-items: center;
+    justify-content: space-between;
+}
+  
 #major-minor-toggle {
     border: 1px solid var(--toggle-button-border); 
+    background-color: var(--toggle-button-background);
+    color: var(--toggle-button-text);
     background: none;
     cursor: pointer;
     padding: 3px;
@@ -9,8 +28,6 @@
     font-style: bold;
     font-size: 0.8rem;
     border-radius: 10px;
-    background-color: var(--toggle-button-background);
-    color: var(--toggle-button-text);
   }
   
   .key-selector {
@@ -22,21 +39,24 @@
 
   .transpose-buttons-container {
     height: 100%;
+    width: 2.5rem;
     display: flex;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
   }
 
   .transpose-button {
     border: 1px solid var(--toggle-button-border);
+    background: var(--toggle-button-background);
+    color: var(--toggle-button-text);
     font-size: 0.8rem;
-    width: 2rem;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-self: center;
+    justify-content: center;
+    align-items: center;
     z-index: 10;
   }
