--- a/src/styles/CircularSettings.css
+++ b/src/styles/CircularSettings.css
@@ -15,7 +15,28 @@
     align-items: center;
     justify-content: space-between;
 }
-  
+
+.monochrome-mode-container {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.monochrome-mode-label {
+    margin-top: -1px;
+    font-size: 0.6rem;
+}
+
+.clear-button {
+  font-size: 0.6rem;
+  min-width: 50px;
+  max-width: 100px;
+  border-radius: 5px;
+  border: 1px solid var(--toggle-button-border);
+  background-color: var(--toggle-button-background);
+}
+
+
 #major-minor-toggle {
     border: 1px solid var(--toggle-button-border); 
     background-color: var(--toggle-button-background);
