--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -67,4 +67,9 @@
   --viz-polygon-stroke: var(--serenity-polygon-stroke);
   --viz-base-note-fill: var(--root-note-highlight);
   --viz-base-note-stroke: var(--serenity-polygon-stroke);
+
+  --settings-button-font-size: 0.8rem;
+  --settings-description-font-size: 0.6rem;
+  --settings-value-font-size: 1.5rem;
+  --settings-section-title-font-size: 1rem;
 }
