--- a/src/styles/ChordNameDisplay.css
+++ b/src/styles/ChordNameDisplay.css
@@ -5,7 +5,7 @@
   align-items: left;
   text-align: left;
   width: 100%;
-  margin-top: 5px; /* Add top margin to create space */
+  margin-top: 0px;
   gap: 0.5rem;
 }
 
