--- a/src/styles/CircularVis.css
+++ b/src/styles/CircularVis.css
@@ -4,9 +4,9 @@
 }
 
 .vis-button {
-    border: 1px solid var(--viz-button-border-default);
+    border: 1px solid var(--vis-button-border-default);
     border-radius: 10%;
-    background: var(--viz-button-background-default);
+    background: var(--vis-button-background-default);
     cursor: pointer;
     padding: 0;
     margin: 0;
@@ -20,40 +20,40 @@
   
 .vis-button.selected {
     border: 1px;
-    background: var(--viz-button-background-selected);
+    background: var(--vis-button-background-selected);
     fill: white;
 }
 
 .vis-button.disabled {
     opacity: 0.5;
-    background: var(--viz-button-background-disabled);
+    background: var(--vis-button-background-disabled);
     cursor: not-allowed;
 }
   
 .vis-button svg {
-    stroke: var(--viz-button-stroke-default);
+    stroke: var(--vis-button-stroke-default);
     stroke-width: 3px;
     stroke-opacity: 0.4;
     fill-opacity: 0.4;
-    fill: var(--viz-button-fill-default);
+    fill: var(--vis-button-fill-default);
 }
   
 .vis-button.selected svg {
-    stroke: var(--viz-button-stroke-selected);
+    stroke: var(--vis-button-stroke-selected);
     stroke-opacity: 1;
     fill-opacity: 1;
 }
 
 .selected-notes-polygon {
     fill: none;
-    stroke: var(--viz-polygon-stroke);
+    stroke: var(--vis-polygon-stroke);
     stroke-width: 6px;
     stroke-linecap: round;
 }
 
 .base-note-dot {
-    fill: var(--viz-base-note-fill);
-    stroke: var(--viz-base-note-stroke);
+    fill: var(--vis-base-note-fill);
+    stroke: var(--vis-base-note-stroke);
     stroke-width: 1px;
 }
   
