new experimental styles

--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -18,6 +18,7 @@
   --serenity-key-white-selected1: #F3D9A4;
   --serenity-key-black-selected0: #6BB4C7;
   --serenity-key-black-selected1: #D3B77E;
+  --serenity-key-diatonic: lightgreen;
   --serenity-note-text-on-white: #333333;
   --serenity-note-text-on-black: #F5F5F5;
   --serenity-icon-selected-background: #598ABB;
