--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -7,18 +7,12 @@
   --serenity-darkgrey: #333333;
   --serenity-key-white: #fafaf6;
   --serenity-key-black: #444444;
-  --serenity-highlight-gradient-start: #4A90E2;
-  --serenity-highlight-gradient-end: #6FC3F7;
-  --serenity-bg-gradient-start: #FFFFFF;
-  --serenity-bg-gradient-end: #F3F5F7;
-  --serenity-error-red: #FF4C4C;
-  --serenity-success-green: #4CAF50;
 
   --serenity-key-white-selected0: #A8D5E2;
   --serenity-key-white-selected1: #F3D9A4;
   --serenity-key-black-selected0: #6BB4C7;
   --serenity-key-black-selected1: #D3B77E;
-  --serenity-key-diatonic: lightgreen;
+  --serenity-key-diatonic: lightblue;
   --serenity-note-text-on-white: #333333;
   --serenity-note-text-on-black: #F5F5F5;
   --serenity-icon-selected-background: #598ABB;
