--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -7,12 +7,11 @@
   --serenity-darkgrey: #333333;
   --serenity-key-white: #fafaf6;
   --serenity-key-black: #444444;
-
   --serenity-key-white-selected0: #A8D5E2;
   --serenity-key-white-selected1: #F3D9A4;
   --serenity-key-black-selected0: #6BB4C7;
   --serenity-key-black-selected1: #D3B77E;
-  --serenity-key-diatonic: lightblue;
+  --serenity-key-diatonic: #B8D1E5;
   --serenity-note-text-on-white: #333333;
   --serenity-note-text-on-black: #F5F5F5;
   --serenity-icon-selected-background: #598ABB;
