--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -1,5 +1,6 @@
 :root {
   --h2wratio: 0.25; /* Height to width ratio of the linear keyboard */
+  --white-keys-per-2-octaves: 14;
 }
 
 .keyboardlinear {
@@ -20,6 +21,7 @@
   display: flex;
   font-size: 0.8rem;
   font-weight: bold;
+  width: calc(100% / var(--white-keys-per-2-octaves));
   height: 100%;
   justify-content: center;
   padding: 0 5px; /* Added padding to center the text */
@@ -30,6 +32,7 @@
   align-items: center;
   font-size: 0.8rem;
   height: 60%;
+  width: calc((100% / var(--white-keys-per-2-octaves)) * 0.7);
   justify-content: center;
   z-index: 2;
 }
