--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -43,18 +43,18 @@
   border: 2px solid var(--key-root-note-border);
 }
 
-/* White key states */
+/* 
 .piano-key.white {
   color: var(--serenity-note-text-on-white);
   background-color: var(--serenity-key-white);
 }
 
 
-.piano-key.white[data-state="highlighted"] {
+.piano-key.white.highlighted {
   background-color: color-mix(in srgb, var(--serenity-key-white) 65%, var(--serenity-key-diatonic) 35%);
 }
 
-.piano-key.white[data-state="muted"] {
+.piano-key.white.muted {
   background-color: var(--serenity-key-white);
   opacity: 0.7;
 }
@@ -63,27 +63,27 @@
   background-color: var(--serenity-key-white-selected0);
 }
 
-.piano-key.white[data-state="highlighted"].selected {
+.piano-key.white.highlighted.selected {
   background-color: color-mix(in srgb, var(--serenity-key-white-selected0) 65%, var(--serenity-key-diatonic) 35%);
   opacity: 1.0;
 }
 
-.piano-key.white[data-state="muted"].selected {
+.piano-key.white.muted.selected {
   background-color: lightgrey;
   opacity: 0.5;
 }
 
-/* Black key states */
+
 .piano-key.black {
   background-color: var(--serenity-key-black);
   color: var(--serenity-note-text-on-black);
 }
 
-.piano-key.black[data-state="highlighted"] {
+.piano-key.black.highlighted {
   background-color: color-mix(in srgb, var(--serenity-key-black) 65%, var(--serenity-key-diatonic) 35%);
 }
 
-.piano-key.black[data-state="muted"] {
+.piano-key.black.muted {
   background-color: var(--serenity-key-black);
   opacity: 0.7;
 }
@@ -92,11 +92,11 @@
   background-color: var(--serenity-key-black-selected0);
 }
 
-.piano-key.black[data-state="highlighted"].selected {
+.piano-key.black.highlighted.selected {
   background-color: color-mix(in srgb, var(--serenity-key-black-selected0) 65%, var(--serenity-key-diatonic) 35%);
 }
 
-.piano-key.black[data-state="muted"].selected {
+.piano-key.black.muted.selected {
   background-color: var(--serenity-key-black);
   opacity: 0.5;
 }
@@ -107,5 +107,5 @@
   white-space: nowrap;
   margin-left: -25%;
 }
-
+*/
 
