--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -33,8 +33,10 @@
   font-size: 0.8rem;
   height: 60%;
   width: calc((100% / var(--white-keys-per-2-octaves)) * 0.7);
+  transform: translateX(-50%);
   justify-content: center;
   z-index: 2;
+  opacity: 1;
 }
 
 .piano-key.white.root-note,
