--- a/src/styles/KeyboardBase.css
+++ b/src/styles/KeyboardBase.css
@@ -45,23 +45,21 @@
 
 /* Highlighted selected */
 :is(.key-base.highlighted.selected, .key-base.highlighted.selected path) {
-  color: var(--serenity-note-text-on-black);
+  color: var(--serenity-note-text-on-white);
   background-color: var(--serenity-highlighted-selected);
   fill: var(--serenity-highlighted-selected);
 }
 
 /* Muted unselectd */
 :is(.key-base.muted, .key-base.muted path) {
-  color: var(--serenity-note-text-on-white);
+  color: var(--serenity-muted-font);
   background-color: var(--serenity-muted-unselected);
   fill: var(--serenity-muted-unselected);
-  opacity: 1;
 }
 
 /* Muted selected */
 :is(.key-base.muted.selected, .key-base.muted.selected path) {
-  color: var(--serenity-note-text-on-white);
+  color: var(--serenity-note-text-on-black);
   background-color: var(--serenity-muted-selected);
   fill: var(--serenity-muted-selected);
-  opacity: 1;
 }
