--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -26,7 +26,7 @@
 .pie-slice-key path {
   stroke: grey;
   stroke-width: 1px;
-  border: 1px solid var(--serenity-border-color);
+  border: 1px solid var(--serenity-key-border-color);
 }
 
 /* Hover State */
