--- a/src/styles/CircularVis.css
+++ b/src/styles/CircularVis.css
@@ -4,9 +4,9 @@
 }
 
 .vis-button {
-    border: 1px solid var(--vis-button-border-default);
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 10%;
-    background: var(--vis-button-background-default);
+    background: white;
     cursor: pointer;
     padding: 0;
     margin: 0;
@@ -26,34 +26,34 @@
 
 .vis-button.disabled {
     opacity: 0.5;
-    background: var(--vis-button-background-disabled);
+    background: lightgray;
     cursor: not-allowed;
 }
   
 .vis-button svg {
-    stroke: var(--vis-button-stroke-default);
+    stroke: rgba(0, 0, 0, 0.4);
     stroke-width: 3px;
     stroke-opacity: 0.4;
     fill-opacity: 0.4;
-    fill: var(--vis-button-fill-default);
+    fill: none;
 }
   
 .vis-button.selected svg {
-    stroke: var(--vis-button-stroke-selected);
+    stroke: white;
     stroke-opacity: 1;
     fill-opacity: 1;
 }
 
 .selected-notes-polygon {
     fill: none;
-    stroke: var(--vis-polygon-stroke);
-    stroke-width: 6px;
+    stroke: var(--serenity-polygon-stroke);
+    stroke-width: 4px;
     stroke-linecap: round;
 }
 
 .base-note-dot {
-    fill: var(--vis-base-note-fill);
-    stroke: var(--vis-base-note-stroke);
+    fill: var(--root-note-highlight);
+    stroke: var(--serenity-polygon-stroke);
     stroke-width: 1px;
 }
   
