--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -15,7 +15,7 @@
 .piano-key {
   position: absolute;
   align-items: flex-end;
-  border: 1px solid var(--key-border-color);
+  border: 1px solid var(--serenity-key-border-color);
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
@@ -35,6 +35,7 @@
   width: calc((100% / var(--white-keys-per-2-octaves)) * 0.7);
   transform: translateX(-50%);
   justify-content: center;
+  border: 2.0px solid var(--serenity-key-border-color);
   z-index: 2;
   opacity: 1;
 }
